fix(scss[twitchsidebar]): remove overflow

--- a/src/components/TwitchSidebar/_twitch-sidebar.scss
+++ b/src/components/TwitchSidebar/_twitch-sidebar.scss
@@ -3,7 +3,6 @@
 
 .twitch-sidebar {
   height: calc(100% - 54px);
-  overflow: hidden;
   width: 254px;
   padding-left: 24px;
   display: flex;
